<resources>
    <string name="app_name">Messenger</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="server_title">Авторизация</string>
    <string name="server_note">В настоящее время авторизация доступна только для админов и представителей учебных заведений.\n По всем вопросам обращайтесь в службу поддержки</string>
    <string name="server_log">Логин</string>
    <string name="server_school">Войти как школа</string>
    <string name="server_profile">Профиль</string>
    <string name="server_password">Пароль</string>
    <string name="server_sign_in">Войти</string>
    <string name="adminOfSchool_saveMe">Запомнить меня</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
<<<<<<< HEAD
    <string name="title_activity_main2">Main2Activity</string>
=======
    <string name="title_activity_sign_in_teach">SignInTeach</string>
>>>>>>> 75a9d956068c1e8d1acb0c4739aa368cc5c75a97
</resources>
