<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/server"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_of_app"
    tools:context=".Authorizatoin">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ProgressBar
            android:id="@+id/progressBarInAdminForSchool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_margin="32dp"
                    app:srcCompat="@drawable/ic_lock_icon"
                    tools:ignore="VectorDrawableCompat" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginLeft="25dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/server_title"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp" />

                    <ImageView
                        android:id="@+id/helpAdmin2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingTop="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="15dp"
                        android:src="@drawable/info22" />
                </LinearLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginRight="40sp"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/server_log"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#FFFFFF" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginRight="40sp"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/server_password"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:inputType="textPassword"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#FFFFFF" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/checkBoxSaveMeInAdm"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40sp"
                        android:layout_marginRight="40sp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/adminOfSchool_saveMe"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#FFFFFF" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="bottom"
                    android:gravity="bottom">

                    <Button
                        android:id="@+id/singIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40sp"
                        android:layout_marginRight="40sp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/button_gradient"
                        android:fontFamily="@font/roboto_light"
                        android:padding="24dp"
                        android:text="@string/server_sign_in"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />
                </LinearLayout>
                <Button
                    android:id="@+id/registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40sp"
                    android:layout_marginRight="40sp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_gradient"
                    android:fontFamily="@font/roboto_light"
                    android:text="Зарегестрироваться"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>